--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "simplechat",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node index.js",
-    "build": "node app.js"
+    "build": "node index.js"
   },
   "keywords": [],
   "author": "Prashanth D",
